# review-agent

./: .gitignore  README.md  SPEC.md  ai_review.ini  ai_review.py  pyproject.toml
review_agent/: __init__.py  config.py  report_md.py  rules.py  scanner.py  types.py
